--- a/404.md
+++ b/404.md
@@ -3,4 +3,10 @@ layout: default
 title: 404
 ---
 
-# 404
+<div class="container">
+  <div class="row">
+    <div class="col">
+      hehe
+    </div>
+  </div>
+</div>
