--- a/404.md
+++ b/404.md
@@ -2,11 +2,16 @@
 layout: default
 title: 404
 ---
+<style type="text/css">
 
+</style>
 <div class="container">
   <div class="row">
-    <div class="col">
-      hehe
+    <div class="col-md-12">
+      <div class="text_align_center margino">dffd</div>
+    </div>
+    <div class="col-md-12">
+      dfge
     </div>
   </div>
 </div>
