--- a/404.md
+++ b/404.md
@@ -8,7 +8,11 @@ title: 404
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="text_align_center margino">dffd</div>
+      <div class="text-center margino">
+        <figure>
+          <img src="{{ "/assets/images/404.png" | relative_url }}">
+        </figure>
+      </div>
     </div>
     <div class="col-md-12">
       dfge
