--- a/404.md
+++ b/404.md
@@ -3,19 +3,29 @@ layout: default
 title: 404
 ---
 <style type="text/css">
-
+  body{
+    background-color: #00aeef !important;
+    padding: 100px 0;
+  }
 </style>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="text-center margino">
+      <div class="text-center">
         <figure>
           <img src="{{ "/assets/images/404.png" | relative_url }}">
         </figure>
       </div>
     </div>
     <div class="col-md-12">
-      dfge
+      <div class="text-center">
+        <h1>
+          <span>Error </span>
+          <br/>
+          <span> Page not found</span>
+        </h1>
+        <a class="btn btn-secondary" href="{{ "/" | relative_url }}">返回首页</a>
+      </div>
     </div>
   </div>
 </div>
