--- a/404.md
+++ b/404.md
@@ -7,6 +7,15 @@ title: 404
     background-color: #00aeef !important;
     padding: 100px 0;
   }
+  h1{
+    font-size: 55px;
+  }
+  h1 .error{
+    color: #ffffff;
+  }
+  .btn{
+    margin-top: 20px;
+  }
 </style>
 <div class="container">
   <div class="row">
@@ -20,11 +29,11 @@ title: 404
     <div class="col-md-12">
       <div class="text-center">
         <h1>
-          <span>Error </span>
+          <span class="error">Error</span>
           <br/>
-          <span> Page not found</span>
+          <span>Page not found</span>
         </h1>
-        <a class="btn btn-secondary" href="{{ "/" | relative_url }}">返回首页</a>
+        <a class="btn btn-secondary btn-lg" href="{{ "/" | relative_url }}">返回首页</a>
       </div>
     </div>
   </div>
