--- a/404.md
+++ b/404.md
@@ -9,9 +9,11 @@ title: 404
   }
   h1{
     font-size: 55px;
+    font-weight: 600;
   }
   h1 .error{
     color: #ffffff;
+    text-transform: uppercase;
   }
   .btn{
     margin-top: 20px;
